# monitorcontrol

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  README.rst  flake.nix  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: api.rst  changelog.rst  cli.rst  conf.py  index.rst  installation.rst  issues.rst  license.rst  linux_setup.rst  make_docs.py  references.rst  requirements.txt
monitorcontrol/: __init__.py  __main__.py  monitor_control.py  monitorcontrol.py
monitorcontrol/ddcci/: __init__.py  vcp_codes.py  vcp_linux.py
monitorcontrol/test_monitor_control/: test_monitor_control.py
monitorcontrol/vcp/: __init__.py  vcp_abc.py  vcp_codes.py  vcp_linux.py  vcp_windows.py
monitorcontrol/vcp/test_vcp/: test_vcp_codes.py
pymonitorcontrol/: __init__.py  monitor_control.py
pymonitorcontrol/ddcci/: __init__.py  vcp_abc.py  vcp_codes.py  vcp_linux.py  vcp_windows.py
pymonitorcontrol/ddcci/test_ddcci/: test_vcp_codes.py
pymonitorcontrol/test_monitor_control/: test_monitor_control.py
tests/: __init__.py  test_cli.py  test_linux_vcp.py  test_monitorcontrol.py  test_vcp_codes.py  test_windows_vcp.py
