[tool.poetry]
name = "monitorcontrol"
description = "Monitor controls using MCCS over DDC-CI."
version = "3.1.0"
authors = ["Alex Martens <alex@thinglab.org>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/newAM/monitorcontrol"
documentation = "https://newam.github.io/monitorcontrol"

[tool.poetry.dependencies]
python = "^3.8"
pyudev = { version = ">=0.23,<0.25", markers = "sys_platform != 'win32'" }

[tool.poetry.dev-dependencies]
black = "24.8.0"
coveralls = "^3"
flake8 = { version = "^7", python = ">=3.8.1,<4.0" }
flake8-bugbear = { version = "^24.4.26", python = ">=3.8.1,<4.0" }
pep8-naming = "~0.14"
pytest = "^8"
pytest-cov = "^5"
sphinx = "^7.1"
sphinx-rtd-theme = "^2"
toml = "~0.10"
voluptuous = "~0.14"

[tool.poetry.scripts]
monitorcontrol = "monitorcontrol.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
