[tool.poetry]
name = "monitorcontrol"
description = "Monitor controls using MCCS over DDC-CI."
version = "3.1.0"
authors = ["Alex Martens <alex@thinglab.org>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/newAM/monitorcontrol"
documentation = "https://newam.github.io/monitorcontrol"

[tool.poetry.dependencies]
python = "^3.9"
pyudev = { version = ">=0.23,<0.25", markers = "sys_platform != 'win32'" }

[tool.poetry.dev-dependencies]
coveralls = "^3"
pytest = "^8"
pytest-cov = "^5"
ruff = "^0.9.1"
sphinx = "^7.1"
sphinx-rtd-theme = "^3"
toml = "~0.10"
voluptuous = "~0.14"

[tool.poetry.scripts]
monitorcontrol = "monitorcontrol.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Add flake8-bugbear and pep8-naming rules
extend-select = ["B", "N"]
