[project]
name = "monitorcontrol"
description = "Monitor controls using MCCS over DDC-CI."
version = "4.0.0"
authors = [{ name = "Alex Martens", email = "alex+monitorcontrol@thinglab.org" }]
license.file = "LICENSE"
readme = "README.rst"
requires-python = ">= 3.9"
dependencies = [
    "pyudev>=0.23.3 ; sys_platform != 'win32'",
]

[dependency-groups]
dev = [
    "coveralls>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.11",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
    "toml>=0.10.2",
]

[project.urls]
Repository = "https://github.com/newAM/monitorcontrol"
Documentation = "https://newam.github.io/monitorcontrol"
Changelog = "https://github.com/newAM/monitorcontrol/blob/main/CHANGELOG.md"
Issues = "https://github.com/newAM/monitorcontrol/issues"

[project.scripts]
monitorcontrol = "monitorcontrol.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["monitorcontrol"]

[tool.ruff.lint]
extend-select = [
    # flake8-builtins
    "A",
    # flake8-unused-arguments
    "ARG",
    # flake8-bugbear
    "B",
    # flake8-logging-format
    "G",
    # pep8-naming
    "N",
]
